--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,21 @@
         "php": ">=8.1.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "api-platform/core": "^2.6",
+        "doctrine/annotations": "^1.13",
+        "doctrine/doctrine-bundle": "^2.5",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.11",
+        "nelmio/cors-bundle": "^2.2",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "ramsey/uuid": "^4.2",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/messenger": "6.0.*",
         "symfony/runtime": "6.0.*",
+        "symfony/validator": "6.0.*",
         "symfony/yaml": "6.0.*"
     },
     "config": {
@@ -67,5 +77,18 @@
             "require": "6.0.*",
             "docker": true
         }
+    },
+    "require-dev": {
+        "dama/doctrine-test-bundle": "^6.7",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "friendsofphp/php-cs-fixer": "^3.5",
+        "justinrainbow/json-schema": "^5.2",
+        "phpunit/phpunit": "^9.5",
+        "qossmic/deptrac-shim": "^0.19.3",
+        "symfony/browser-kit": "6.0.*",
+        "symfony/css-selector": "6.0.*",
+        "symfony/http-client": "6.0.*",
+        "symfony/phpunit-bridge": "^6.0",
+        "zenstruck/foundry": "^1.16"
     }
 }
