--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,7 @@
-controllers:
-    resource: ../src/Controller/
-    type: annotation
+#controllers:
+#    resource: ../src/Controller/
+#    type: annotation
 
 kernel:
-    resource: ../src/Kernel.php
+    resource: ../src/InfraStructure/Shared/Kernel.php
     type: annotation
