--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -13,6 +13,6 @@ doctrine:
             App:
                 is_bundle: false
                 type: attribute
-                dir: '%kernel.project_dir%/src/Domain'
-                prefix: 'App\Domain'
-                alias: Domain
+                dir: '%kernel.project_dir%/src/Entity'
+                prefix: 'App\Entity'
+                alias: Entity
