--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -11,6 +11,10 @@ api_platform:
         json: ['application/merge-patch+json']
     swagger:
         versions: [3]
+        api_keys:
+            apiKey:
+                name: Authorization
+                type: header
     enable_swagger: true
     enable_swagger_ui: true
     enable_re_doc: true
