--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
+        "symfony/expression-language": "6.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.38",
@@ -35,7 +36,8 @@
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "phpro/grumphp-shim": true
         },
         "optimize-autoloader": true,
         "preferred-install": {
@@ -87,7 +89,9 @@
         "dama/doctrine-test-bundle": "^6.7",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "friendsofphp/php-cs-fixer": "^3.5",
+        "hautelook/alice-bundle": "^2.10",
         "justinrainbow/json-schema": "^5.2",
+        "phpro/grumphp-shim": "^1.9",
         "phpunit/phpunit": "^9.5",
         "qossmic/deptrac-shim": "^0.19.3",
         "symfony/browser-kit": "6.0.*",
