--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,3 +20,22 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    ###########
+    # Fixtures #
+     ##########
+    App\DataFixtures\DataProvider\PasswordHasherProvider: ~
+      
+    ###########
+    # OpenApi #
+    ##########
+    App\OpenApi\JwtDecorator:
+        decorates: 'api_platform.openapi.factory'
+        arguments: [ '@.inner' ]
+        
+    ##################
+    # Entitylisteners #
+    ##################
+    App\Doctrine\EntityListener\CustomerEntityListener:
+        tags: 
+            - { name: doctrine.orm.entity_listener }
