--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,6 +5,9 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
         App\Entity\Reseller:
             algorithm: auto
+        App\Entity\Administrator:
+            algorithm: auto
+
 
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
@@ -13,6 +16,14 @@ security:
             entity:
                 class: App\Entity\Reseller
                 property: storeName
+        app_admin_provider:
+            entity:
+                class: App\Entity\Administrator
+                property: email
+                
+        all_users:
+            chain:
+                providers: ['app_user_provider', 'app_admin_provider']
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -21,12 +32,12 @@ security:
             pattern: ^/api/docs
             security: false
             
-        main:
+        reseller_login:
             pattern: /api/login
-            provider: app_user_provider
+            provider: all_users
             json_login:
                 check_path: /api/login_check
-                username_path: storeName
+                username_path: username
                 password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
@@ -34,12 +45,13 @@ security:
         api:
             pattern: ^/api/
             stateless: true
-            provider: app_user_provider
+            provider: all_users
             jwt: ~
 
     access_control:
         - { path: ^/docs, roles: PUBLIC_ACCESS } # Allows accessing API documentations and Swagger UI
-        - { path: ^/authentication_token, roles: PUBLIC_ACCESS }
+        - { path: ^/login_check, roles: PUBLIC_ACCESS }
+        - { path: ^/admin_login, roles: PUBLIC_ACCESS }
         - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
 
 
