--- a/grumphp.yml
+++ b/grumphp.yml
@@ -2,4 +2,12 @@ grumphp:
     tasks:
         phpcsfixer:
             config: .php-cs-fixer.dist.php
-
+        phpstan:
+            configuration: phpstan.neon
+            memory_limit: "-1"
+            use_grumphp_paths: true
+            level: 9
+            
+    parallel:
+        enabled: true
+        max_workers: 4
