--- a/.env
+++ b/.env
@@ -41,5 +41,5 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=CHANGEME
+JWT_PASSPHRASE=f955ff66f068aa32d69a7db07e0cc9ff
 ###< lexik/jwt-authentication-bundle ###
